update readme, mask.js and index.html

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <div class="form-group">
                 <h3>CPF:</h3>
                 <input class="form-control" name="cpf" type="text" id="cpf" />
+
+                <h3>EXEMPLO:</h3>
+                <input class="form-control" name="exemplo" type="text" id="exemplo" />
             </div>
         </div>
     </div>
